After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 610823 - regression: cheese doesn't restore saved balance settings at startup
regression: cheese doesn't restore saved balance settings at startup
Status: RESOLVED FIXED
Product: cheese
Classification: Applications
Component: general
git master
Other Linux
: Normal normal
: 2.28
Assigned To: Cheese Maintainer(s)
Cheese Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2010-02-23 15:24 UTC by Filippo Argiolas
Modified: 2010-02-23 15:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
widget: restore saved balance settings at startup (1.59 KB, patch)
2010-02-23 15:33 UTC, Filippo Argiolas
committed Details | Review

Description Filippo Argiolas 2010-02-23 15:24:16 UTC
From https://bugs.edge.launchpad.net/ubuntu/+source/cheese/+bug/524854

> To reproduce:
> 1: Go to Edit > Preferences
> 2: Edit the Brightness/Contrast/Saturation/Hue settings to preferred settings
> 3: Now close Cheese
> 4: Re-open cheese and you will notice that the settings are not used now
> 5: Check the edit> preferences , you'll notice the sliders are at the exact same 
> spot as had been set previously but these settings are not used.

> To make the preferred settings work again , user has to move the sliders or 
> atleast click on the sliders once which activates the stored settings

It worked before, it's a regression from CheeseWidget port.
Comment 1 Filippo Argiolas 2010-02-23 15:33:06 UTC
The following fix has been pushed:
9eb28fe widget: restore saved balance settings at startup
Comment 2 Filippo Argiolas 2010-02-23 15:33:09 UTC
Created attachment 154503 [details] [review]
widget: restore saved balance settings at startup

Restore balance (brightness, saturation, hue) settings, saved in gconf,
when the camera is initialized.
Somehow I must have missed this while porting Cheese to use CheeseWidget.