widget: restore saved balance settings at startup

Restore balance (brightness, saturation, hue) settings, saved in gconf,
when the camera is initialized.
Somehow I must have missed this while porting Cheese to use CheeseWidget.

https://bugzilla.gnome.org/show_bug.cgi?id=610823